trying to fix img size on mobile

--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -1,8 +1,17 @@
 .profile-pic {
     border-radius: 50%;
-    width: auto;
-    height: 15rem;
+    width: 100%; /* Set image width to 100% of its container */
+    max-width: 15rem; /* Set a maximum width for the image */
+    height: auto; /* Let the height adjust automatically */
     padding-right: 0.5rem;
+}
+
+/* Media query for screens with a maximum width of 768px (typical mobile devices) */
+@media (max-width: 768px) {
+    .profile-pic {
+        max-width: 100%; /* Adjust the maximum width for mobile */
+        height: auto; /* Let the height adjust automatically */
+    }
 }
 
 mat-card {
